--- a/Menu.html
+++ b/Menu.html
@@ -15,7 +15,7 @@
     	    <nav class="menu">
     	    	<a href="index.html">Pagina anterior</a>
     	    	<a href="Nosotros.html">Nosotros</a>
-    	    	<a href="#">Biseccion</a>
+    	    	<a href="biseccion.html">Biseccion</a>
 			    <a href="#">Newton Raphson</a>
 			    <a href="#">Newton 2do Orden</a>
 			    <a href="#">Von Misses</a>
