--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head> <!--contiene todos los elementos detras de escena-->
     	<meta charset="UTF-8">
       <title>Metodos Numericos</title> <!--titulo de la pagina-->
-    	<link rel="icon"  href="imagenes/logotipo1.jpg"> <!--logotipo de la pagina-->
+    	<link rel="icon"  href="https://drive.google.com/file/d/1ghKUwNSXsvCgXxwKXJ8PsrKl5NQ4byJI/view?usp=sharing"> <!--logotipo de la pagina-->
       <link href="style.css" rel="stylesheet">
     <head>	
    
