--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 	<title>Nosotros</title>
-	<link rel="icon" href="imagenes/logotipo1.jpg">
+	<link rel="icon" href="https://drive.google.com/file/d/1ghKUwNSXsvCgXxwKXJ8PsrKl5NQ4byJI/view?usp=sharing">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="Nosotros.css">
@@ -17,7 +17,7 @@
 		<a href="Menu.html"> Atras </a>
 	</ul>
 	 <div class="fondo">
-          <imagenes src="imagenes/nosotros.jpg">
+          <imagenes src="https://drive.google.com/file/d/1P4SvJEDFIE-n-H8mDAFocc99EiAXufiL/view?usp=sharing">
 
         </div>
     
