--- a/Menu.html
+++ b/Menu.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Menu </title>
-<link rel="icon" href="imagenes/logotipo1.jpg">
+<link rel="icon" href="https://drive.google.com/file/d/1ghKUwNSXsvCgXxwKXJ8PsrKl5NQ4byJI/view?usp=sharing">
 <link href="menu.css" rel="stylesheet">
 </head>
 <body>
